summit_release_env_pack/policy/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: require-nonlatest
      match: { resources: { kinds: ["Pod"] } }
      validate:
        message: "Using image tag :latest is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
