summit_release_env_pack/policy/kyverno/no-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-privileged
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: deny-privileged
      match: { resources: { kinds: ["Pod"] } }
      validate:
        message: "Privileged containers are not allowed"
        pattern:
          spec:
            containers:
            - securityContext:
                privileged: "false"
