summit_release_env_pack/policy/kyverno/require-limits-requests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-limits-requests
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: enforce-resources
      match: { resources: { kinds: ["Pod"] } }
      validate:
        message: "CPU and memory requests/limits required"
        pattern:
          spec:
            containers:
            - resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"
